Fix color contrast ratio and heading sequence

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -330,6 +330,7 @@ textarea {
 }
 
 .comment-posted-on {
+    opacity: .9;
     font-size: .8rem;
 }
 
